[gd_scene load_steps=13 format=2]

[ext_resource path="res://Juego/Estaciones/Recarga/estacion_recarga.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Estaciones/Recarga/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Estaciones/Recarga/reacarga.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estaciones/Recarga/vacio.ogg" type="AudioStream" id=5]
[ext_resource path="res://Juego/Fuentes/kenney_future_narrow.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 66.2741
height = 183.801

[sub_resource type="Animation" id=2]
resource_name = "activado"
length = 5.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 38, 38 ), Vector2( 36, 36 ), Vector2( 40, 40 ), Vector2( 36, 36 ), Vector2( 40, 40 ), Vector2( 38, 38 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.811765, 1, 0.0784314 ), Color( 0, 0.811765, 1, 0.117647 ), Color( 0, 0.811765, 1, 0.0784314 ), Color( 0, 0.811765, 1, 0.117647 ), Color( 0, 0.811765, 1, 0.0980392 ), Color( 0, 0.811765, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 38, 38 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.811765, 1, 0.0784314 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.396078, 0.0470588, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="EstacionRecarga" type="Node2D" groups=[
"minimapa",
]]
position = Vector2( 0, -1 )
z_index = 40
z_as_relative = false
script = ExtResource( 3 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
position = Vector2( 0, 5.10834 )
z_index = 1
texture = ExtResource( 1 )

[node name="AreaRecarga" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/activado = SubResource( 2 )
anims/default = SubResource( 3 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="BarraEnergia" type="ProgressBar" parent="."]
margin_left = -85.0
margin_top = -222.487
margin_right = 85.0
margin_bottom = -192.487
rect_min_size = Vector2( 170, 30 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
value = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
